@@ -941,29 +941,54 @@ or (at your option) any later version.</label>
                         <object class="sizeritem">
                             <flag>wxGROW|wxALIGN_CENTER_VERTICAL|wxALL</flag>
                             <border>5</border>
-                            <object class="wxButton" name="ID_BUTTON">
+                            <object class="wxButton" name="GrayScale">
                                 <label>Black and White</label>
                             </object>
                         </object>
                         <object class="sizeritem">
                             <flag>wxGROW|wxALIGN_CENTER_VERTICAL|wxALL</flag>
                             <border>5</border>
-                            <object class="wxButton" name="ID_BUTTON">
+                            <object class="wxButton" name="Serpia">
                                 <label>Serpia</label>
                             </object>
                         </object>
                         <object class="sizeritem">
                             <flag>wxGROW|wxALIGN_CENTER_VERTICAL|wxALL</flag>
                             <border>5</border>
-                            <object class="wxButton" name="ID_BUTTON">
+                            <object class="wxButton" name="EdgeDetect">
                                 <label>Edge Detect</label>
+                            </object>
+                        </object>
+                    </object>
+                </object>
+            </object>
+        </object>
+        <object class="sizeritem">
+            <flag>wxGROW|wxALIGN_CENTER_VERTICAL|wxLEFT|wxRIGHT|wxTOP</flag>
+            <border>5</border>
+            <object class="wxStaticBoxSizer">
+                <orient>wxVERTICAL</orient>
+                <label>Analysis</label>
+                <object class="sizeritem">
+                    <flag>wxGROW|wxALIGN_CENTER_VERTICAL</flag>
+                    <border>5</border>
+                    <object class="wxGridSizer">
+                        <cols>2</cols>
+                        <rows>0</rows>
+                        <vgap>0</vgap>
+                        <hgap>0</hgap>
+                        <object class="sizeritem">
+                            <flag>wxGROW|wxALIGN_CENTER_VERTICAL|wxALL</flag>
+                            <border>5</border>
+                            <object class="wxButton" name="Histogram">
+                                <label>Histogram</label>
                             </object>
                         </object>
                         <object class="sizeritem">
                             <flag>wxGROW|wxALIGN_CENTER_VERTICAL|wxALL</flag>
                             <border>5</border>
-                            <object class="wxButton" name="ID_BUTTON">
-                                <label>Histogram</label>
+                            <object class="wxButton" name="Metadata">
+                                <label>Metadata</label>
                             </object>
                         </object>
                     </object>
@@ -995,11 +1020,11 @@ or (at your option) any later version.</label>
                         <object class="sizeritem">
                             <flag>wxGROW|wxALIGN_CENTER_VERTICAL|wxALL</flag>
                             <border>5</border>
-                            <object class="wxSlider" name="ID_SLIDER">
+                            <object class="wxSlider" name="Brightness">
                                 <size>150,-1</size>
                                 <style>wxSL_HORIZONTAL</style>
-                                <max>100</max>
-                                <value>50</value>
+                                <max>200</max>
+                                <value>100</value>
                             </object>
                         </object>
                         <object class="sizeritem">
@@ -1012,11 +1037,11 @@ or (at your option) any later version.</label>
                         <object class="sizeritem">
                             <flag>wxGROW|wxALIGN_CENTER_VERTICAL|wxALL</flag>
                             <border>5</border>
-                            <object class="wxSlider" name="ID_SLIDER">
+                            <object class="wxSlider" name="Contrast">
                                 <size>150,-1</size>
                                 <style>wxSL_HORIZONTAL</style>
-                                <max>100</max>
-                                <value>50</value>
+                                <max>200</max>
+                                <value>100</value>
                             </object>
                         </object>
                     </object>
@@ -1028,7 +1053,7 @@ or (at your option) any later version.</label>
             <border>5</border>
             <object class="wxStaticBoxSizer">
                 <orient>wxVERTICAL</orient>
-                <label>Levels</label>
+                <label>Red/Green/Blue Levels</label>
                 <object class="sizeritem">
                     <flag>wxGROW|wxALIGN_CENTER_VERTICAL</flag>
                     <border>5</border>
@@ -1048,11 +1073,11 @@ or (at your option) any later version.</label>
                         <object class="sizeritem">
                             <flag>wxGROW|wxALIGN_CENTER_VERTICAL|wxALL</flag>
                             <border>5</border>
-                            <object class="wxSlider" name="ID_SLIDER">
+                            <object class="wxSlider" name="Red">
                                 <size>150,-1</size>
                                 <style>wxSL_HORIZONTAL</style>
                                 <max>100</max>
-                                <value>50</value>
+                                <value>0</value>
                             </object>
                         </object>
                         <object class="sizeritem">
@@ -1065,11 +1090,11 @@ or (at your option) any later version.</label>
                         <object class="sizeritem">
                             <flag>wxGROW|wxALIGN_CENTER_VERTICAL|wxALL</flag>
                             <border>5</border>
-                            <object class="wxSlider" name="ID_SLIDER">
+                            <object class="wxSlider" name="Blue">
                                 <size>150,-1</size>
                                 <style>wxSL_HORIZONTAL</style>
-                                <max>100</max>
-                                <value>50</value>
+                                <max>200</max>
+                                <value>100</value>
                             </object>
                         </object>
                         <object class="sizeritem">
@@ -1082,11 +1107,81 @@ or (at your option) any later version.</label>
                         <object class="sizeritem">
                             <flag>wxGROW|wxALIGN_CENTER_VERTICAL|wxALL</flag>
                             <border>5</border>
-                            <object class="wxSlider" name="ID_SLIDER">
+                            <object class="wxSlider" name="Green">
                                 <size>150,-1</size>
                                 <style>wxSL_HORIZONTAL</style>
-                                <max>100</max>
-                                <value>50</value>
+                                <max>200</max>
+                                <value>100</value>
+                            </object>
+                        </object>
+                    </object>
+                </object>
+            </object>
+        </object>
+        <object class="sizeritem">
+            <flag>wxGROW|wxALIGN_CENTER_HORIZONTAL|wxLEFT|wxRIGHT|wxTOP</flag>
+            <border>5</border>
+            <object class="wxStaticBoxSizer">
+                <orient>wxVERTICAL</orient>
+                <label>Hue/Saturation/Luminosity Levels</label>
+                <object class="sizeritem">
+                    <flag>wxGROW|wxALIGN_CENTER_VERTICAL</flag>
+                    <border>5</border>
+                    <object class="wxFlexGridSizer">
+                        <cols>2</cols>
+                        <rows>0</rows>
+                        <vgap>2</vgap>
+                        <hgap>2</hgap>
+                        <growablecols>1</growablecols>
+                        <object class="sizeritem">
+                            <flag>wxALIGN_CENTER_VERTICAL|wxALL</flag>
+                            <border>5</border>
+                            <object class="wxStaticText" name="ID_TEXT">
+                                <label>Hue:</label>
+                            </object>
+                        </object>
+                        <object class="sizeritem">
+                            <flag>wxGROW|wxALIGN_CENTER_VERTICAL|wxALL</flag>
+                            <border>5</border>
+                            <object class="wxSlider" name="Hue">
+                                <size>150,-1</size>
+                                <style>wxSL_HORIZONTAL</style>
+                                <max>200</max>
+                                <value>100</value>
+                            </object>
+                        </object>
+                        <object class="sizeritem">
+                            <flag>wxALIGN_CENTER_VERTICAL|wxALL</flag>
+                            <border>5</border>
+                            <object class="wxStaticText" name="ID_TEXT">
+                                <label>Saturation:</label>
+                            </object>
+                        </object>
+                        <object class="sizeritem">
+                            <flag>wxGROW|wxALIGN_CENTER_VERTICAL|wxALL</flag>
+                            <border>5</border>
+                            <object class="wxSlider" name="Saturation">
+                                <size>150,-1</size>
+                                <style>wxSL_HORIZONTAL</style>
+                                <max>200</max>
+                                <value>100</value>
+                            </object>
+                        </object>
+                        <object class="sizeritem">
+                            <flag>wxALIGN_CENTER_VERTICAL|wxALL</flag>
+                            <border>5</border>
+                            <object class="wxStaticText" name="ID_TEXT">
+                                <label>Luminosity:</label>
+                            </object>
+                        </object>
+                        <object class="sizeritem">
+                            <flag>wxGROW|wxALIGN_CENTER_VERTICAL|wxALL</flag>
+                            <border>5</border>
+                            <object class="wxSlider" name="Luminosity">
+                                <size>150,-1</size>
+                                <style>wxSL_HORIZONTAL</style>
+                                <max>200</max>
+                                <value>100</value>
                             </object>
                         </object>
                     </object>
